--- a/package.json
+++ b/package.json
@@ -22,5 +22,15 @@
   "bugs": {
     "url": "https://github.com/Babitabisht/Search/issues"
   },
-  "homepage": "https://github.com/Babitabisht/Search#readme"
+  "homepage": "https://github.com/Babitabisht/Search#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongodb": "^3.4.0",
+    "mongoose": "^5.8.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
+  }
 }
