--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "config": "^3.2.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "mongodb": "^3.4.0",
     "mongoose": "^5.8.1",
     "passport": "^0.4.1",
