--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "config": "^3.2.4",
-    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
+    "log4js": "^6.1.0",
     "mongodb": "^3.4.0",
     "mongoose": "^5.8.1",
+    "npm": "^6.13.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
