--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "node app",
-    "start": "node app"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
